<resources>
	<string name="STRING_QUICKMENU">Quick Menu</string>
	<string name="STRING_PICTUREMODE">Picture Mode</string>
	<string name="STRING_SOUNDMODE">Sound Mode</string>
	<string name="STRING_SLEEPTIMER">Sleep Timer</string>
	<string name="STRING_POWERBASS">Power Bass Booster</string>
	<string name="STRING_SIGNALBOOSTER">Signal Booster</string>
	<string name="STRING_SETUP">SETUP</string>
	<string name="STRING_MENU_LANG">Menu Language</string>
    <string name="STRING_TUNING_MODE">Tuning Mode</string>
    <string name="STRING_SCAN_TYPE">Scan Type</string>
    <string name="STRING_BAND_WIDTH">BandWidth</string>
    <string name="STRING_TYPE">Type</string>
    <string name="STRING_NAME">Name</string>
    <string name="STRING_DTV_MANUAL_TUNING">DTV Manual Tuning</string>
    <string name="STRING_WEAK">WEAK</string>
    <string name="STRING_AVERAGE">AVERAGE</string>
    <string name="STRING_STRONG">STRONG</string>
    <string name="STRING_GOOD">GOOD</string>
    <string name="STRING_POOR">POOR</string>
    <string name="STRING_MEDIUM">MEDIUM</string>
    <string name="STRING_NEW">New</string>
    <string name="STRING_DTV_TUNE">DTV Tune</string>
    <string name="STRING_ATV_TUNE">ATV Tune</string>
    <string name="STRING_SIGNAL_STRENGTH">Signal Strength</string>
    <string name="STRING_SIGNAL_QUALITY">Signal Quality</string>
    <string name="STRING_SIGNAL_STRENGTH_QUALITY">Signal Strength Quality</string>
    <string name="STRING_SCANNING_PLEASE_WAIT">Scanning channels, please wait...</string>
    <string name="STRING_NEW_CHANNES_FOUND">New Channels-Total</string>
    <string name="STRING_DTV_SETTINGS">DTV Settins</string>
    <string name="STRING_SUBTITLE_AND_AUDIO">Subtitle and Audio</string>
    <string name="STRING_SUBTITLE_DISPLAY">Subtitle Display</string>
    <string name="STRING_SUBTITLE_TYPE">Subtitle Type</string>
    <string name="STRING_PRIMARY_SUBTITLE_LAUNGUAGE">Primary Subtitle Language</string>
    <string name="STRING_SECONDARY_SUBTITLE_LANGUAGE">Secondary Subtitle Language</string>
    <string name="STRING_PRIMARY_AUDIO_LANGUAGE">Primary Audio Language</string>
    <string name="STRING_SECONDARY_AUDIO_LANGUAGE">Secondary Audio Language</string>
    <string name="STRING_PIN_SETTING">PIN Setting</string>
	<string name="STRING_WRONG_PIN">Incorrect PIN code, please try again!</string>
    <string name="STRING_CHANGE_PIN">Change PIN</string>
    <string name="STRING_DELETE_PIN">Delete PIN</string>
    <string name="STRING_PARENTAL_CONTROL">Parental Control</string>
    <string name="STRING_PARENTAL_CONTROL_BLOCK_LEVEL">Block level:</string>
    <string name="STRING_LOCAL_TIME_SETTING">Local Time Setting</string>
    <string name="STRING_DYNAMIC_SCAN">Dynamic Scan</string>
    <string name="STRING_SYSTEM_INFO_DTV">System Information(DTV)</string>
    <string name="STRING_DETAILS">Details</string>
    <string name="STRING_SERVICE_LIST">Service List</string>
    <string name="STRING_LINE_NO">Line NO.</string>
    <string name="STRING_TRANSMITTER">Transmitter</string>
    <string name="STRING_CN">C/N</string>
    <string name="STRING_UNCONNECTED_PACKETS">Unconnected Packets</string>
    <string name="STRING_CODE_RATE">Code Rate</string>
    <string name="STRING_ONID">ONID</string>
    <string name="STRING_NID">NID</string>
    <string name="STRING_CENTER_FREQUENCY">Center Frequency(MHz)</string>
    <string name="STRING_BER">BER</string>
    <string name="STRING_MODULATION">Modulation</string>
    <string name="STRING_GUARD_INTERVAL">Guard Interval</string>
    <string name="STRING_TSID">TSID</string>
    <string name="STRING_PORTUGUESE">Portuguese</string>
    <string name="STRING_DUTCH">Dutch</string>
    <string name="STRING_CZECH">Czech</string>
    <string name="STRING_HUNGARIAN">Hungarian</string>
    <string name="STRING_FINNISH">Finnish</string>
    <string name="STRING_NORWEGIAN">Norwegian</string>
    <string name="STRING_DANISH">Danish</string>
    <string name="STRING_SLOVENIAN">Slovenian</string>
    <string name="STRING_HINDI">Hindi</string>
    <string name="STRING_IRISH">Irish</string>
    <string name="STRING_TURKISH">Turkish</string>
    <string name="STRING_ROMANIAN">Romainian</string>
    <string name="STRING_BULGARIAN">Bulgarian</string>
    <string name="STRING_BURMESE">Burmese</string>
    <string name="STRING_LATVIAN">Latvian</string>
    <string name="STRING_LITHUANIAN">Lithuanian</string>
    <string name="STRING_LATIN">Latin</string>
    <string name="STRING_NEPALI">Nepali</string>
    <string name="STRING_SLOVAK">Slovak</string>
    <string name="STRING_ALBANIAN">Albanian</string>
    <string name="STRING_SERBIAN">Serbian</string>
    <string name="STRING_UKRAINIAN">Ukrainian</string>
    <string name="STRING_CAMBODIAN">Cambodian</string>
    <string name="STRING_ICELANDIC">Icelandic</string>
    <string name="STRING_ARMENIAN">Armenian</string>
    <string name="STRING_CROATIAN">Croatian</string>
    <string name="STRING_VIETNAMESE">Vietnamese</string>
    <string name="STRING_ESTONIAN">Estoonian</string>
    <string name="STRING_MACEDONIAN">Macedonian</string>
    <string name="STRING_TAMIL">Tamil</string>
    <string name="STRING_CATALAN">Catalan</string>
	<string name="STRING_AUTO_TUNING">Auto Tuning</string>
	<string name="STRING_MANUAL_TUNING">Manual Tuning</string>
	<string name="STRING_QUICK_SETUP">Quick Setup</string>
	<string name="STRING_LOCATION">Location</string>
	<string name="STRING_SW_LINCEN">Software Licences</string>
	<string name="STRING_SYSTEM_INFO">System Information</string>
	<string name="STRING_RESET_TV">Reset TV</string>
	<string name="STRING_NO_TELETEXT">No Teletext</string>
	<string name="STRING_PICTURE">PICTURE</string>
	<string name="STRING_PIC_SETTINGS">Picture Settings</string>
	<string name="STRING_ASPECT_RATIO">Aspect Ratio</string>
	<string name="STRING_3D_MANAGE">3D Colour Management</string>
	<string name="STRING_BASE_COLOR_ADJ">Base Colour Adjustment</string>
	<string name="STRING_ACTIVE_BACKLIGHT_CTRL">Active Backlight Control</string>
	<string name="STRING_SOUND">SOUND</string>
	<string name="STRING_S_MTS">MTS</string>
	<string name="STRING_S_DUAL">Dual</string>
	<string name="STRING_S_BALANCE">Balance</string>
	<string name="STRING_S_AD_SOUND_SETTING">Advanced Sound Settings</string>
	<string name="STRING_S_AUDIO_DIST_CTRL">Audio Distortion Control</string>
    <string name="STRING_S_TV_MOUNT">TV Mounting</string>
	<string name="STRING_S_DYNAMIC_RANGE_CTRL">Dynamic Range Control</string>
	<string name="STRING_S_AUDIO_OFFSET">Audio Level Offset</string>
	<string name="STRING_S_SPECTRUM_ANALY">Spectrum Analyzer</string>
	<string name="STRING_APPLICATION">APPLICATION</string>
	<string name="STRING_A_MEDIAPLAYER">Media Player</string>
	<string name="STRING_A_ON_TIMER">On Timer</string>
	<string name="STRING_A_SLEEP_TIMER">Sleep Timer</string>
    <string name="STRING_SYSTEM_SETTINGS">System Settings</string>
    <string name="STRING_COMMON_INTERFACE">Common Interface</string>
	<string name="STRING_DONE">Done</string>
	<string name="STRING_RED">Red</string>
	<string name="STRING_GREEN">Green</string>
	<string name="STRING_BLUE">Blue</string>
	<string name="STRING_YELLOW">Yellow</string>
	<string name="STRING_MAGENTA">Magenta</string>
	<string name="STRING_CYAN">Cyan</string>
	<string name="STRING_HUE">Hue</string>
	<string name="STRING_SATURATION">Saturation</string>
	<string name="STRING_BRIGHTNEDD">Brightness</string>
	<string name="STRING_PERFERENCE">PREFERENCE</string>
	<string name="STRING_P_TELETEXT">Teletext</string>
	<string name="STRING_P_TELETEXT_LANG">Teletext Language</string>
	<string name="STRING_P_PANEL_LOCK">Panel Lock</string>
	<string name="STRING_P_DISP_SETTINGS">Display Settings</string>
	<string name="STRING_P_AV_CONNECTION">AV Connection</string>
	<string name="STRING_P_ENERGY_SAVING">Energy Saving Settings</string>
	<string name="STRING_P_BLUE_SCREEN">Blue Screen</string>
    <string name="STRING_HORIZONTAL_POSITION">Horizontal Position</string>
    <string name="STRING_VERTICAL_POSITION">Vertical Position</string>
    <string name="STRING_CLOCK_PHASE">Clock Phase</string>
    <string name="STRING_SAMPLING_CLOCK">Sampling Clock</string>
	<string name="STRING_ENTER">Enter</string>
	<string name="STRING_OK">OK</string>
	<string name="STRING_EDIT">Edit</string>
	<string name="STRING_AUTOTUNING">Auto Tuning</string>
	<string name="STRING_AUTO_S_BOOSTER">Auto Signal Booster</string>
	<string name="STRING_STARTSCAN">Start Scan</string>
	<string name="STRING_AUTO">Auto</string>
	<string name="STRING_AUTO_FORMAT">Auto Format</string>
	<string name="STRING_43_STRETCH">4:3 Stretch</string>
	<string name="STRING_PC_SETTINGS">PC Settings</string>
	<string name="STRING_INPUT_LABEL">Input Labelling</string>
	<string name="STRING_PC_HDMI_AUDIO_1">PC/HDMI 1 Audio</string>
	<string name="STRING_HDMI_AUDIO_1">HDMI 1 Audio</string>
	<string name="STRING_LABEL">Label</string>
	<string name="STRING_AUTO_PWOER_DOWN">Automatic Power Down</string>
	<string name="STRING_NOSIGNAL_POWER_DOWN">No Signal Power Down</string>
	<string name="STRING_TV">TV</string>
	<string name="STRING_EXT1">EXT 1</string>
	<string name="STRING_EXT2">EXT 2</string>
	<string name="STRING_HDMI1">HDMI 1</string>
	<string name="STRING_HDMI2">HDMI 2</string>
	<string name="STRING_PC">PC</string>
	<string name="STRING_VIDEO1">VIDEO 1</string>
	<string name="STRING_VIDEO2">VIDEO 2</string>
	<string name="STRING_YUV">YUV</string>
	<string name="STRING_BASS">Bass</string>
	<string name="STRING_TREBLE">Treble</string>
	<string name="STRING_POER_BASS_BOOSTER">Power Bass Booster</string>
    <string name="STRING_EQUALISER">Equaliser</string>
    <string name="STRING_SURROUND">Surround</string>
	<string name="STRING_FOUND">Found</string>
	<string name="PROGRESS">Progress</string>
	<string name="HINT_EXIT">EXIT</string>
	<string name="HINT_STOP">Stop</string>
	<string name="HINT_SELECT">Select</string>
	<string name="HINT_ADJUST">Adjust</string>
	<string name="STRING_CHANNEL_LIST">Channel List</string>
	<string name="tabsettingpicture_indicator">Picture</string>
	<string name="STRING_0_9">0 - 9</string>
	<string name="STRING_ENABLE_TIMER">Enable On Timer</string>
	<string name="STRING_INPUT">Input</string>
	<string name="STRING_T_INPUT">Input</string>
	<string name="STRING_POSITION">Pos.</string>
	<string name="STRING_POSITION_F">Position</string>
	<string name="STRING_VOLUME">Volume</string>
	<string name="STRING_QUICKSETUP_LOCATION">To use the TV for displaying in a store showroom,\nplease select [Store]. [Home] mode is recommended\nfor normal use.</string>
	<string name="ATV">ATV</string>
	<string name="STRING_SORT">Sort</string>
	<string name="STRING_HOME">Home</string>
	<string name="STRING_STORE">Store</string>
	<string name="STRING_ATV_MANUAL_TUNING">ATV Manual Tuning</string>
	<string name="STRING_CLOSE">Close</string>
    <string name="msg_select_atv_table_scan">Select ATV scan method.</string>
    <string name="table_scan">Table Scan</string>
    <string name="seek_scan">Seek Scan</string>
    <string name="settings_check_update">Check Update</string>
    <string name="update">Update</string>
    <string name="recorded_videos">Recorded Videos</string>
    <string name="manage">Manage</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>
    <string name="lock_unlock">Lock/Unlock</string>
    <string name="abort">Abort</string>
    <string name="format_item_position">&lt; %1$s/%2$s &gt;</string>
    <string name="move">Move</string>
    <string name="favorite">Favorite</string>
    <string name="frequency">Frequency</string>
    <string name="num">Num.</string>
    <string name="service_id">Service ID</string>
    <string name="program_name">Program Name</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="dtv_channel_manager">DTV Channel Manager</string>
</resources>